Fix topbar alignment issues in väli/loppuselvitys

--- a/va-common/web/va/style/soresu-va.less
+++ b/va-common/web/va/style/soresu-va.less
@@ -246,14 +246,10 @@
 
 .va-register-number {
   margin-top: 5px;
-  margin-right: 5px;
   float: right;
 
   .title {
     margin-right: 5px;
     font-weight: bold;
-  }
-
-  .value {
   }
 }
