--- a/va-hakija/web/va/style/main.less
+++ b/va-hakija/web/va/style/main.less
@@ -31,5 +31,6 @@
 #container {
   @media print {
     margin-top: 20px;
+    max-width: none;
   }
 }
