--- a/va-hakija/web/va/style/topbar.less
+++ b/va-hakija/web/va/style/topbar.less
@@ -8,6 +8,8 @@
   box-shadow: 0 1px 2px 0 rgba(0,0,0,0.10);
   z-index: 100;
 
+  @center-block-width: 400px;
+
   #logo {
     display: inline-block;
     vertical-align: top;
@@ -25,41 +27,57 @@
 
     @media print {
       margin-top: 5px;
-      width: ~"calc(100% - 330px)";
+      width: ~"calc(100% - 350px)";
+    }
+  }
+
+  .topbar-title-and-save-status {
+    display: inline-block;
+    width: @center-block-width;
+
+    @media print {
+      width: 100%;
     }
   }
 
   h1 {
     display: inline-block;
     vertical-align: middle;
-    min-width: 110px;
-    margin-right: 30px;
     font-size: 22px;
     font-weight: normal;
     text-transform: uppercase;
   }
 
+  #form-save-status {
+    display: inline-block;
+    vertical-align: middle;
+    height: 58px;
+    border-left: 1px solid @light-gray;
+    margin-left: 30px;
+    padding-left: 30px;
+
+    .messages {
+      font-size: 13px;
+      color: @form-label-black;
+      position: relative;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+
+    @media print {
+      border: none;
+      float: right;
+      padding-left: 0;
+    }
+  }
+
   #form-controls {
     display: inline-block;
     vertical-align: middle;
-    border-left: 1px solid @light-gray;
-    padding-left: 20px;
+    margin-left: 20px;
 
     .form-control, #toggle-language, #preview-button {
       display: inline-block;
-      vertical-align: middle;
-
-      @media print {
-        display: none;
-      }
-    }
-
-    button {
-      margin-top: 5px;
-
-      @media print {
-        display: none;
-      }
     }
 
     .form-control-button-tooltip {
@@ -69,25 +87,7 @@
     }
 
     @media print {
-      border: none;
-      text-align: right;
-      width: ~"calc(100% - 160px)";
-    }
-  }
-
-  #form-save-status {
-    display: inline-block;
-    vertical-align: middle;
-    width: 180px;
-    height: 42px;
-    margin-right: 20px;
-
-    .messages {
-      font-size: 13px;
-      color: @form-label-black;
-      position: relative;
-      top: 50%;
-      transform: translateY(-50%);
+      display: none;
     }
   }
 
@@ -95,8 +95,7 @@
     display: inline-block;
     vertical-align: top;
     color: @bright-red;
-    width: 340px;
-    margin-right: 20px;
+    width: @center-block-width;
 
     @media print {
       display: none;
@@ -110,27 +109,20 @@
 
   #form-error-summary {
     display: inline-block;
-    vertical-align: baseline;
     font-size: 13px;
-    margin-right: 20px;
-
-    .validation-errors-summary {
-      margin-right: 10px;
-      position: relative;
-
-      &:before {
-        position: absolute;
-        right: -20px;
-        content: '|';
-        color: @light-gray;
-      }
-    }
+    margin-left: 20px;
   }
 
   .preview-link {
     display: inline-block;
-    vertical-align: baseline;
     font-size: 13px;
+    margin-left: 20px;
+  }
+
+  #form-error-summary + .preview-link {
+    border-left: 1px solid @light-gray;
+    padding-left: 15px;
+    margin-left: 15px;
   }
 
   @media print {
